creating search and updating css of tourguide.js

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <!-- New package added by me-->
+    <!-- New css added by me-->
     
 
     <!--
