--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,12 @@
     <!-- font css -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:wght@100;200;300;400;500;
     600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:wght@100;200;300;400;500;
+    600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto Condensed:wght@100;200;300;400;500;
+    600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins Condensed:wght@100;200;300;400;500;
+    600;700;800;900&display=swap" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
